config/k8s/01_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-boot-generator
  name: spring-boot-generator
spec:
  selector:
    matchLabels:
      app: spring-boot-generator
  template:
    metadata:
      labels:
        app: spring-boot-generator
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SERVER_PORT
          value: '8080'
        - name: CONFIGMAP_PATH
          value: '/etc/config'
        - name: LOG_LEVEL
          value: 'info'
        image: quay.io/snowdrop/spring-boot-generator:latest
        imagePullPolicy: Always
        name: spring-boot-generator
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: spring-boot-generator
