config/k8s/02_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-generator
  name: spring-boot-generator
spec:
  ports:
  - name: 8000-tcp
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
  selector:
    app: spring-boot-generator
