config/k8s/03_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: spring-boot-generator
spec:
  rules:
    - host: generator.snowdrop.me
      http:
        paths:
          - backend:
              serviceName: spring-boot-generator
              servicePort: 80
            path: /
    - host: generator.snowdrop.dev
      http:
        paths:
          - backend:
              serviceName: spring-boot-generator
              servicePort: 80
            path: /
  tls:
    - hosts:
        - generator.snowdrop.me
        - generator.snowdrop.dev
      secretName: generator-snowdrop-me-tls
